# ZiadWithMistralOcr

./: README.md  pyproject.toml
src/ZiadWithMistralOcr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mistral_batch_ocr.egg-info/: PKG-INFO  SOURCES.txt
src/ziadwithmistalocr/: __init__.py  core.py  processor.py  utils.py
